@@ -1,3 +1,17 @@
+/**
+ * ***************************************************************************** 
+ * Copyright (c) 2018 Fraunhofer IEM, Paderborn, Germany
+ * <p>
+ * This program and the accompanying materials are made available under the
+ * terms of the Eclipse Public License 2.0 which is available at
+ * http://www.eclipse.org/legal/epl-2.0.
+ * <p>
+ * SPDX-License-Identifier: EPL-2.0
+ * <p>
+ * Contributors:
+ *   Johannes Spaeth - initial API and implementation
+ * *****************************************************************************
+ */
 package test.cases.bugfixes.issue5;
 
 import boomerang.Boomerang;
@@ -13,17 +27,17 @@ import boomerang.scope.Method;
 import boomerang.scope.Statement;
 import boomerang.scope.Type;
 import boomerang.scope.Val;
+import boomerang.utils.MethodWrapper;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 import test.TestingFramework;
-import test.setup.MethodWrapper;
-import wpds.impl.Weight.NoWeight;
+import wpds.impl.NoWeight;
 
 /**
  * This code was added to test <a href="https://github.com/CodeShield-Security/SPDS/issues/5">Issue
@@ -36,12 +50,7 @@ public class Issue5Test {
   @Test
   public void excludeFoo() {
     TestingFramework testingFramework =
-        new TestingFramework() {
-          @Override
-          public List<String> getExcludedPackages() {
-            return List.of(Foo.class.getName());
-          }
-        };
+        new TestingFramework(Collections.emptyList(), List.of(Foo.class.getName()));
 
     MethodWrapper methodWrapper = new MethodWrapper(target, "foos", "java.util.List");
     FrameworkScope frameworkScope = testingFramework.getFrameworkScope(methodWrapper);
@@ -66,7 +75,7 @@ public class Issue5Test {
         new MethodWrapper(Foo.class.getName(), "baz"),
         new MethodWrapper(Foo.class.getName(), "bar"),
         new MethodWrapper(Foo.class.getName(), "<init>"),
-        new MethodWrapper("java.lang.Object", "<init>"));
+        new MethodWrapper(java.lang.Object.class.getName(), "<init>"));
   }
 
   private void assertResults(
@@ -84,7 +93,7 @@ public class Issue5Test {
             .findFirst();
 
     if (newFoo.isEmpty()) {
-      Assert.fail("Could not find instantiation of Foo");
+      Assertions.fail("Could not find instantiation of Foo");
     }
 
     // This will only show results if set_exclude above gets uncommented
@@ -95,20 +104,13 @@ public class Issue5Test {
     Collection<MethodWrapper> methodCalledOnFoo = new HashSet<>();
     for (Statement s : statements) {
       System.out.println("\t" + s);
-      DeclaredMethod calledMethod = s.getInvokeExpr().getMethod();
+      DeclaredMethod calledMethod = s.getInvokeExpr().getDeclaredMethod();
       System.out.println("\t\t" + calledMethod);
-      MethodWrapper methodWrapper =
-          new MethodWrapper(
-              calledMethod.getDeclaringClass().getFullyQualifiedName(),
-              calledMethod.getName(),
-              calledMethod.getReturnType().toString(),
-              calledMethod.getParameterTypes().stream()
-                  .map(Object::toString)
-                  .collect(Collectors.toList()));
-      methodCalledOnFoo.add(methodWrapper);
+
+      methodCalledOnFoo.add(calledMethod.toMethodWrapper());
     }
 
-    Assert.assertEquals(methodCalledOnFoo, Set.of(expectedCalledMethodsOnFoo));
+    Assertions.assertEquals(Set.of(expectedCalledMethodsOnFoo), methodCalledOnFoo);
   }
 
   private static Collection<Statement> getMethodsInvokedFromInstanceInStatement(
@@ -119,7 +121,7 @@ public class Issue5Test {
         queryStatement.getMethod().getControlFlowGraph().getSuccsOf(queryStatement).stream()
             .findFirst();
     if (successorStmt.isEmpty()) {
-      Assert.fail("Could not find successor for " + queryStatement);
+      Assertions.fail("Could not find successor for " + queryStatement);
     }
 
     ForwardQuery fwq = new ForwardQuery(new Edge(queryStatement, successorStmt.get()), var);
